--- a/Smashtag/Smashtag/Base.lproj/Main.storyboard
+++ b/Smashtag/Smashtag/Base.lproj/Main.storyboard
@@ -2,27 +2,94 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="B0d-7C-8Ua">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Tweet Table View Controller-->
         <scene sceneID="Yt6-rd-G2u">
             <objects>
                 <tableViewController id="L9x-0z-pMo" customClass="TweetTableViewController" customModule="Smashtag" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="alS-4S-cnx">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="174" sectionHeaderHeight="28" sectionFooterHeight="28" id="alS-4S-cnx">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <textField key="tableHeaderView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search Keywords" textAlignment="natural" minimumFontSize="17" id="Xx0-ZZ-PJB">
+                            <rect key="frame" x="0.0" y="64" width="600" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <animations/>
+                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                            <textInputTraits key="textInputTraits" keyboardType="twitter" returnKeyType="search"/>
+                        </textField>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweet-cell" id="dzm-70-gFD">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweet-cell" rowHeight="174" id="dzm-70-gFD" customClass="TweetTableViewCell" customModule="Smashtag" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="122" width="600" height="174"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dzm-70-gFD" id="C9b-Aw-83V">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="173.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ph6-v6-Cyy">
+                                            <rect key="frame" x="64" y="8" width="511" height="19.5"/>
+                                            <animations/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="200" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jl6-Dt-A62">
+                                            <rect key="frame" x="64" y="35" width="523" height="102"/>
+                                            <animations/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vWC-TC-dQQ">
+                                            <rect key="frame" x="8" y="8" width="48" height="48"/>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="48" id="4MF-xP-CWx"/>
+                                                <constraint firstAttribute="height" constant="48" id="uVM-Ur-dfb"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1tb-y5-hLi">
+                                            <rect key="frame" x="64" y="145" width="523" height="20.5"/>
+                                            <animations/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                     <animations/>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="1tb-y5-hLi" secondAttribute="bottom" id="1Gf-1L-zSi"/>
+                                        <constraint firstItem="Jl6-Dt-A62" firstAttribute="leading" secondItem="ph6-v6-Cyy" secondAttribute="leading" id="6Yi-0i-FGO"/>
+                                        <constraint firstItem="1tb-y5-hLi" firstAttribute="leading" secondItem="Jl6-Dt-A62" secondAttribute="leading" id="Atc-J6-21d"/>
+                                        <constraint firstAttribute="leadingMargin" secondItem="vWC-TC-dQQ" secondAttribute="leading" id="F0t-UA-fEQ"/>
+                                        <constraint firstAttribute="topMargin" secondItem="vWC-TC-dQQ" secondAttribute="top" id="Lfp-ia-9vg"/>
+                                        <constraint firstAttribute="topMargin" secondItem="ph6-v6-Cyy" secondAttribute="top" id="Vm3-Fd-WfU"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="ph6-v6-Cyy" secondAttribute="trailing" constant="17" id="ZLq-9g-BqT"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Jl6-Dt-A62" secondAttribute="trailing" constant="5" id="frj-fD-fwc"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Jl6-Dt-A62" secondAttribute="bottom" id="gWz-DX-OFs"/>
+                                        <constraint firstItem="Jl6-Dt-A62" firstAttribute="leading" secondItem="vWC-TC-dQQ" secondAttribute="trailing" constant="8" id="gkP-pk-03G"/>
+                                        <constraint firstItem="ph6-v6-Cyy" firstAttribute="leading" secondItem="vWC-TC-dQQ" secondAttribute="trailing" constant="8" id="kRc-K1-rT0"/>
+                                        <constraint firstItem="Jl6-Dt-A62" firstAttribute="top" secondItem="ph6-v6-Cyy" secondAttribute="bottom" constant="8" id="o7k-te-5XO"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="1tb-y5-hLi" secondAttribute="trailing" constant="5" id="rQF-3s-DQP"/>
+                                        <constraint firstItem="1tb-y5-hLi" firstAttribute="top" secondItem="Jl6-Dt-A62" secondAttribute="bottom" constant="8" id="tt2-ro-AXF"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="gWz-DX-OFs"/>
+                                            <exclude reference="gkP-pk-03G"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
                                 <animations/>
+                                <connections>
+                                    <outlet property="tweetProfileImageView" destination="vWC-TC-dQQ" id="8s5-XM-CLE"/>
+                                    <outlet property="tweetScreenNameLabel" destination="ph6-v6-Cyy" id="zhk-i6-eL9"/>
+                                    <outlet property="tweetTextLabel" destination="Jl6-Dt-A62" id="450-GX-3Is"/>
+                                    <outlet property="tweetUpdateTime" destination="1tb-y5-hLi" id="veB-Cf-hM6"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -31,6 +98,16 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="TRl-oe-Pko"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="6GZ-gT-U3G">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                        <connections>
+                            <action selector="refresh:" destination="L9x-0z-pMo" eventType="valueChanged" id="dOJ-UR-m4K"/>
+                        </connections>
+                    </refreshControl>
+                    <connections>
+                        <outlet property="searchTextField" destination="Xx0-ZZ-PJB" id="qnS-L8-0b9"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NLj-Wg-6bp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
